@@ -72,6 +72,7 @@ z80_bit tape_any_flag_loading;
 //0: autoload con ENTER
 //1: autoload con LOAD(J) ""
 //2: autoload con L O A D "" (para spectrum 128k spanish y chloe)
+//3: autoload con cursor arriba dos veces y enter (para NextOS)
 int autoload_spectrum_loadpp_mode;
 
 
@@ -369,7 +370,8 @@ int tap_open(void)
 	tape_block_open();
 
 
-	if (noautoload.v==0 && !MACHINE_IS_TBBLUE) { //TODO: desactivamos autoload en TBBLUE
+	//if (noautoload.v==0 && !MACHINE_IS_TBBLUE) { //TODO: desactivamos autoload en TBBLUE
+        if (noautoload.v==0) { 
 		debug_printf (VERBOSE_INFO,"Restarting autoload");
 		initial_tap_load.v=1;
 		initial_tap_sequence=0;
@@ -1319,6 +1321,13 @@ int tap_save_detect_ace(void)
         return 0;
 }
 
+void gestionar_autoload_spectrum_start_cursorenter(void)
+{
+        debug_printf (VERBOSE_INFO,"Autoload tape with Cursor up (twice) and ENTER");
+        initial_tap_sequence=1;
+        autoload_spectrum_loadpp_mode=3;
+}
+
 
 void gestionar_autoload_spectrum_start_loadpp(void)
 {
@@ -1599,22 +1608,31 @@ void gestionar_autoload_spectrum(void)
                                 //que esta en la rom del basic pues entra en reg_pc==0x12a9
                 if (!tbblue_bootrom.v) {
                                         if (
-                                          reg_pc==0x3683 ||
+                                          /*reg_pc==0x3683 ||
                                           reg_pc==0x36a9 ||
                                           reg_pc==0x36be ||
                                           reg_pc==0x36bb ||
                                           reg_pc==0x1875 ||
                                           reg_pc==0x187a ||
-                                          reg_pc==0x1891
-                                        ) gestionar_autoload_spectrum_start_enter();
+                                          reg_pc==0x1891*/
+                                          reg_pc==0x073f
+                                        ) {
+                                                //Solo envio de cursor arriba dos veces, enter , en menu NextOS
+                                                //printf ("Sending autoload cursor up (2) + enter\n");
+                                                gestionar_autoload_spectrum_start_cursorenter();
+                                        }
 
                                         //para spanish 128k
-                                        else if (reg_pc==0x25a0) gestionar_autoload_spectrum_start_loadpp();
+                                        /*else if (reg_pc==0x25a0) {
+                                                printf ("Sending l o a d ''\n");
+                                                gestionar_autoload_spectrum_start_loadpp();
+                                        }
 
                                         //Para 48k
                                         else {
+                                             printf ("Sending load'' 48k\n");
                                              gestionar_autoload_spectrum_48kmode();
-                                        }
+                                        }*/
                 }
 
           break;
@@ -2044,7 +2062,8 @@ void realtape_insert(void)
 	if (autodetect_rainbow.v) enable_rainbow();
 
 
-        if (noautoload.v==0 && !MACHINE_IS_TBBLUE) { //TODO: desactivamos autoload en TBBLUE
+        //if (noautoload.v==0 && !MACHINE_IS_TBBLUE) { //TODO: desactivamos autoload en TBBLUE
+        if (noautoload.v==0) { 
                 debug_printf (VERBOSE_INFO,"Restarting autoload");
                 initial_tap_load.v=1;
                 initial_tap_sequence=0;
